# SmartThermostat

./: .gitignore  .integrityignore  Cargo.toml  INTEGRITY.sha256  README.md  logger.db  profiles_backup.sql  reset_password.rs  system.db  system.db-shm  system.db-wal  system.db.corrupted.backup  system.enc.db  users.db  users_backup.sql  weather.db
scripts/: gen_integrity.sh  verify_intergrity.sh
src/: auth.rs  database.env  db.rs  diagnostic.rs  energy.rs  function.rs  guest.rs  hvac.rs  lib.rs  logger.rs  main.rs  main.rs.bak  menu.rs  menu.rs.new  profile.rs  senser.rs  system.db  system.db-shm  system.db-wal  technician.rs  ui.rs  weather.rs
tests/: integration_test.rs
