[package]
name = "SmartThermostat"
version = "0.1.0"
edition = "2024"
authors = ["Tahsinur Rahman", "Hsiao-Yin Peng", "Proma Roy", "Md Ariful Islam Fahim"]

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
blake3 = "1.5"
colored = "3.0"
chrono = "0.4"
chrono-tz = "0.10.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
lazy_static = "1"
once_cell = "1"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rpassword = "7.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1.5"
